--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
-    <title>satyam-portfolio</title>
+    <title>Satyam Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
